[package]
name = "rsdsl_dnsd"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
dns-message-parser = "0.7.0"
notify = "5.1.0"
rsdsl_dhcp4d = { git = "https://github.com/rsdsl/dhcp4d.git", version = "0.1.6" }
serde_json = "1.0"
thiserror = "1.0"
