[package]
name = "rsdsl_dnsd"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
dns-message-parser = "0.7.0"
ipnet = "2.5.0"
rsdsl_dhcp4d = { git = "https://github.com/rsdsl/dhcp4d.git", version = "0.2.1" }
serde_json = "1.0"
signal-hook = "0.3.17"
thiserror = "1.0"
trust-dns-proto = "0.22.0"
