[package]
name = "rsdsl_dnsd"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
dns-message-parser = "0.7.0"
hickory-proto = { version = "0.24.0", default-features = false }
ipnet = "2.5.0"
rsdsl_dhcp4d = { git = "https://github.com/rsdsl/dhcp4d.git" }
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git" }
serde_json = "1.0"
signal-hook = "0.3.17"
thiserror = "1.0"
